crates/tui/tests/storybook/snapshots/app_tool::present_plan_tool_states.collapsed.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 84 22
  0   0   1 fg=AnsiValue(8)
  0   1  13 attrs=dim
  0  73  10 attrs=dim
  2   0   1 fg=AnsiValue(77)
  2   1  13 attrs=dim
  2  73  10 attrs=dim
 18   0   1 fg=AnsiValue(237)
 18   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 18   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 18   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 18   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 18   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 18   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 18   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 18   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 18   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 18  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 18  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 18  13  71 fg=AnsiValue(237)
 19   1   1 fg=Black bg=White
 20   0  84 fg=AnsiValue(237)
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10  66 bg=AnsiValue(233)
 21  76   8 fg=AnsiValue(244) bg=AnsiValue(233)
