crates/tui/tests/storybook/snapshots/app_tool::present_plan_tool_states.expanded.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 465
expression: frame.styles_text()
---
dim: 84 22
  0   0   1 fg=AnsiValue(8)
  0   1  13 attrs=dim
  0  30   2 attrs=dim
  2   0   1 fg=AnsiValue(77)
  2   1  13 attrs=dim
  3   2   4 fg=AnsiValue(244)
  3   8   6 fg=Rgb { r: 253, g: 151, b: 31 }
  4   2   4 fg=AnsiValue(244)
  4   8  22 fg=Rgb { r: 255, g: 255, b: 255 }
  5   2   4 fg=AnsiValue(244)
  6   2   4 fg=AnsiValue(244)
  6   8   3 fg=Rgb { r: 255, g: 255, b: 255 }
  6  11   4 fg=Rgb { r: 190, g: 132, b: 255 }
  7   2   4 fg=AnsiValue(244)
  7   8  30 fg=Rgb { r: 255, g: 255, b: 255 }
  8   2   4 fg=AnsiValue(244)
  8   8  11 fg=Rgb { r: 255, g: 255, b: 255 }
  9   2   4 fg=AnsiValue(244)
  9   8   1 fg=Rgb { r: 255, g: 255, b: 255 }
 10   2   4 fg=AnsiValue(244)
 10   8   3 fg=Rgb { r: 255, g: 255, b: 255 }
 11   2   4 fg=AnsiValue(244)
 12   2   4 fg=AnsiValue(244)
 12   8  14 fg=Rgb { r: 253, g: 151, b: 31 }
 13   2   4 fg=AnsiValue(244)
 13   8  17 fg=Rgb { r: 255, g: 255, b: 255 }
 18   0   1 fg=AnsiValue(237)
 18   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 18   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 18   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 18   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 18   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 18   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 18   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 18   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 18   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 18  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 18  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 18  13  71 fg=AnsiValue(237)
 19   1   1 fg=Black bg=White
 20   0  84 fg=AnsiValue(237)
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10  66 bg=AnsiValue(233)
 21  76   8 fg=AnsiValue(244) bg=AnsiValue(233)
