crates/tui/tests/storybook/snapshots/app_tool::read_file_tool_block.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
⏺ read_file src/main.rs
  3 lines




─ ✿ working… ────────────────────────────────────────────  ─

────────────────────────────────────────────────────────────
