crates/tui/tests/storybook/snapshots/app_tool::read_file_tool_block_error.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
⏺ read_file missing.rs
  could not read file: missing.rs


─────────────────────────────────────────────────────────  ─

────────────────────────────────────────────────────────────
