crates/tui/tests/storybook/snapshots/app_tool::read_file_tool_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 464
expression: frame.text()
---
* read_file ×3 (1 error)
  pending.rs
  src/main.rs
  missing.rs








─ ✿ working… ───────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────
 ○ normal                                                   1:1 100%
