crates/tui/tests/storybook/snapshots/app_tool::read_file_tool_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 607
expression: frame.text()
---
* explore ×3 (1 error)
  read_file pending.rs
  read_file src/main.rs
  read_file missing.rs








─ ✿ working… ───────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────
 ○ normal                                                   1:1 100%
