crates/tui/tests/storybook/snapshots/app_tool::streaming_edit_file_draft_diff.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* edit_file src/live.rs
   2 -     1
   3 - }
   2 +     2






─ ✿ working… ─────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────
 ○ normal                                                             1:1 100%
